examples/types/expected/0213-types-multi-return-as-value-type.stderr
error: a bare-paren `(A, B)` is a multi-return signature, valid only as a return type; a tuple-valued field uses `Tuple(…)`
  --> examples/types/0213-types-multi-return-as-value-type.sx:5:27
   |
 5 | Point :: struct { coords: (i64, i64); }   // field value type — rejected
   |                           ^^^^^^^^^^
